feat: finalised user registration and activation
