# backend/cmd/api/auth.go
@@ -1,10 +1,13 @@
 package main
 
 import (
+	"crypto/sha256"
+	"encoding/hex"
 	"net/http"
 
 	"github.com/dopp1e/webingo/backend/internal/dto"
 	"github.com/dopp1e/webingo/backend/internal/errors"
+	"github.com/google/uuid"
 )
 
 // registerUserHandler godoc
@@ -14,10 +17,10 @@ import (
 //	@Tags			authentication
 //	@Accept			json
 //	@Produce		json
-//	@Param			user	body		model.User	true	"User registration details"
-//	@Success		201		{object}	model.User	"User successfully registered"
-//	@Failure		400		{object}	error		"Bad request"
-//	@Failure		500		{object}	error		"Internal server error"
+//	@Param			user	body		dto.UserCreateRequest	true	"User registration details"
+//	@Success		201		{object}	dto.UserActivateData	"User successfully registered"
+//	@Failure		400		{object}	error					"Bad request"
+//	@Failure		500		{object}	error					"Internal server error"
 //	@Router			/authentication/register [post]
 func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Request) {
 	var payload dto.UserCreateRequest
@@ -31,16 +34,27 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 		return
 	}
 
-	if err := app.service.Users.CreateAndInvite(r.Context(), payload, app.config.mail.exp); err != nil {
-		if err == errors.ErrAlreadyExists {
-			app.conflictResponse(w, r, err)
-			return
+	plainToken := uuid.New().String()
+	hash := sha256.Sum256([]byte(plainToken))
+	hashToken := hex.EncodeToString(hash[:])
+
+	if err := app.service.Users.CreateAndInvite(r.Context(), payload, hashToken, app.config.mail.exp); err != nil {
+		switch err {
+		case errors.ErrUsernameExists, errors.ErrEmailExists, errors.ErrAlreadyExists:
+			app.badRequestResponse(w, r, err)
+		default:
+			app.internalServerError(w, r, err)
 		}
-		app.internalServerError(w, r, err)
 		return
 	}
 
-	if err := app.jsonResponse(w, http.StatusCreated, nil); err != nil {
+	userData := &dto.UserActivateData{
+		Username: payload.Username,
+		Email:    payload.Email,
+		Token:    plainToken,
+	}
+
+	if err := app.jsonResponse(w, http.StatusCreated, userData); err != nil {
 		app.internalServerError(w, r, err)
 	}
 }
